--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="profile">
           <img class="me-photo" src="images/me2.jpg" alt="">
           <h2>Hello.</h2>
-          <p>I am currently a computer science student at sahqraa university.</p>
+          <p>I am currently a computer science student at Shaqraa university.</p>
         </div>
         <hr>
         <div class="skills">
