--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 <body>
 
     <div class="identity">
-        <img class="top-cloud"src="images/cloud.png" alt="">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud">
+        <!-- <img class="top-cloud-2" src="images/cloud.png" alt="cloud"> -->
+        <!-- <img class="top-cloud-3" src="images/cloud.png" alt="cloud"> -->
         <h1>I'm salman</h1>
         <h2 class="programmer">A <span class="Pro">Pro</span>grammer</h2>
-        <img src="images/cloud.png" class="bottom-cloud" alt="">
+        <div class="title-decoration"></div>
+        <!-- <img src="images/cloud.png" class="bottom-cloud" alt="cloud"> -->
+        <img src="images/cloud.png" class="bottom-cloud-2" alt="cloud">
         <!-- <img src="images/mountain.png" class="mountain" alt=""> -->
     </div>
     <div class="middle-container">
@@ -39,6 +43,29 @@
             <h3 class="title-skills">Math</h3>
             <p class="des-skills">Doing math one my skills that I really good at, No wonder I am a Programmer and love coding.</p>
           </div>
+        </div>
+        <hr>
+        <div class="achievements">
+          <h2>My Achievements.</h2>
+          <div class="achievement-row">
+            <img class="achievement-icon" src="images/3rd-place.png" alt="Award icon">
+            <h3 class="title-achievement">University Excellence Award for the 3rd place</h3>
+            <p class="des-achievement">Received academic excellence award for outstanding performance in computer science curriculum at Shaqraa University and participating in hackathons representing the college.</p>
+            <p class="des-achievement"><a href="images/award.jpg">Click here to see the certificate</a></p>
+          </div>
+          <div class="achievement-row">
+            <img class="project-icon" src="images/acka.png" alt="Project icon">
+            <h3 class="title-achievement">Qualithon Project -Mulhim-</h3>
+            <p class="des-achievement">Gained the forth place with our project Mulhim.</p>
+            <p class="des-achievement"><a href="images/Mulhim.pdf">Click to see certificate of participating.</a></p>
+          </div>
+          <div class="achievement-row">
+            <img class="certificates-icon" src="images/certificates.png" alt="Hackathon icon">
+            <h3 class="title-achievement">Certificates</h3>
+            <p class="des-achievement">Microsoft Azure AI Fundamentals, <a href="images/ach1.pdf">Click Here</a></p>
+            <p class="des-achievement">Designing and Implementing a Microsoft Azure AI Solution, <a href="images/ach2.pdf">Click Here</a></p>
+            <p class="des-achievement">Leading Teams  by University of Michigan and offered through Coursera, <a href="images/ach3.pdf">Click Here</a></p>
+            <p class="des-achievement">Ethical Hacking Fundamental by LearnKartS and offered through Coursera, <a href="images/ach4.pdf">Click Here</a></p>
         </div>
         <hr>
         <div class="contact-me">
